# 100-exercises-to-learn-rust

./: .gitignore
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/.hooks/: initialize.sh  post-create.sh
exercises/03_ticket_v1/02_validation/src/: lib.rs
exercises/03_ticket_v1/04_visibility/src/: lib.rs
exercises/03_ticket_v1/07_setters/src/: lib.rs
exercises/03_ticket_v1/12_outro/src/: lib.rs
exercises/04_traits/03_operator_overloading/src/: lib.rs
exercises/04_traits/08_sized/src/: lib.rs
exercises/04_traits/10_assoc_vs_generic/src/: lib.rs
exercises/04_traits/12_copy/src/: lib.rs
exercises/04_traits/13_drop/src/: lib.rs
exercises/04_traits/14_outro/src/: lib.rs
exercises/05_ticket_v2/03_variants_with_data/src/: lib.rs
exercises/05_ticket_v2/04_if_let/src/: lib.rs
exercises/05_ticket_v2/05_nullability/src/: lib.rs
exercises/05_ticket_v2/07_unwrap/src/: lib.rs
exercises/05_ticket_v2/08_error_enums/src/: lib.rs
exercises/05_ticket_v2/09_error_trait/src/: lib.rs
exercises/05_ticket_v2/10_packages/: Cargo.toml
exercises/05_ticket_v2/13_try_from/src/: lib.rs
exercises/05_ticket_v2/14_source/src/: lib.rs
exercises/05_ticket_v2/15_outro/src/: description.rs  status.rs  title.rs
exercises/06_ticket_management/01_arrays/src/: lib.rs
exercises/08_futures/08_outro/: Cargo.toml
exercises/08_futures/08_outro/src/: api.rs  db.rs  main.rs  ticket.rs
exercises/08_futures/08_outro/src/api/: filters.rs  handlers.rs  models.rs
helpers/ticket_fields/src/: description.rs  title.rs
(+23 files in other folders)
