[package]
name = "outro_08"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
futures = "0.3.30"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
strum = "0.26.2"
strum_macros = "0.26.4"
thiserror = "1.0.61"
ticket_fields = { path = "../../../helpers/ticket_fields" }
tokio = { version = "1", features = ["full"] }
warp = "0.3.7"
